welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:5: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
  }gauche()
   ^Runner:12: error: value droite is not a member of Unit
possible cause: maybe a semicolon is missing before `value droite'?
  }droite()
   ^